2005-06-18 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/Store/LCFSIndexInput.h
    * Headers/Store/LCFSIndexOutput.h
    * Source/Store/LCFSIndexInput.m
    * Source/Store/LCFSIndexOutput.m:
    Prevent close NSFileHandle twice.
    * Source/Document/LCDateTools.m:
    Remove unit test for millisecond.
    * Source/Index/TestTermInfos.m:
    Use UKTrue() instead of UKObjectsEqual().
    * Source/Index/GNUmakefile
    Disable failed tests for now.

2005-06-17  Quentin Mathe <qmathe@club-internet.fr>

    * Headers/Store/LCMMapDirectory.h:
    * Source/Store/LCMMapDirectory.m:
    Added MMapDirectory.java port (compile but not included in build process
    currently).

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile.postamble: Added.
    * GNUmakefile.preamble:
    Fixed in order to allow compilation with 'make test=yes' from parent
    directories when UnitKit isn't already installed, and to avoid symbolic
    links to UnitKit source directory replicated at each subproject level.

2005-06-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCSegmentMerger.m: 
	Initialize maxDoc correctly (patched by Quentin).
	* Source/Headers/LCHit.m: 
	* Source/Search/LCHit.m: 
	Update to Apache Lucene SVN.

2005-06-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCTermInfosWriter.m: fix bug.

2005-06-04 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCIndexReader.m:
	* Source/Store/LCSegmentInfos.m:
	Update to Lucene SVN (180066).
	* Headers/Util/Util.h:
	Add NSData+Additions.h
	* Source/Search/LCDefaultSimilarity.m:
	Add math.h to fix a weird bug on Linux (wrong result from log()).

2005-06-02 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCIndexWriter.m:
	* Source/Store/LCFSDirectory.m:
	Update to Lucene SVN (179620).

2005-06-01 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCSegmentInfos.m:
	Fix bug on Linux. Not sure why it causes problem.
	* Source/Index/LCTerm.m: