@@ -38,6 +38,12 @@ LuceneKit_Index_OBJC_FILES = \
 
 ifeq ($(test), yes)
 LuceneKit_Index_OBJC_FILES += \
+	TestIndexReader.m \
+	TestDocHelper.m
+endif
+
+ifeq ($(atest), yes)
+LuceneKit_Index_OBJC_FILES += \
 	TestMockIndexInput.m \
 	TestMockIndexOutput.m \
 	TestTermInfos.m \
@@ -52,12 +58,8 @@ LuceneKit_Index_OBJC_FILES += \
 	TestSegmentReader.m \
 	TestMultiReader.m \
 	TestFilterIndexReader.m \
+	TestIndexReader.m \
 	TestDocHelper.m
-endif
-
-ifeq ($(atest), yes)
-LuceneKit_Index_OBJC_FILES += \
-	TestIndexReader.m 
 endif
 
 LuceneKit_Index_INCLUDE_DIRS += -I../..
