@@ -463,6 +463,7 @@
 
 - (void) mergeNorms
 {
+NSLog(@"<=== mergeNorms ===");
 	int i;
     for (i = 0; i < [fieldInfos size]; i++) {
 		LCFieldInfo *fi = [fieldInfos fieldInfoWithNumber: i];
@@ -487,6 +488,7 @@
 			[output close];
 		}
     }
+NSLog(@"=== mergeNorms ===>");
 }
 
 @end
